--- a/data/sources/praguejs.yaml
+++ b/data/sources/praguejs.yaml
@@ -471,10 +471,10 @@ series:
       meta_description: 'Tue, Apr 26, 6:30 PM  CEST: Get out and get social in 2022 : come out and discuss JS together!
 
         Get in touch with the organizers with any questions you have. We welcome a diverse range of topics that a'
-      og_title: '2022 #4 , Tue, Apr 26, 2022, 6:30 PM   | Meetup'
+      og_title: '2022 #4 Developer Experience (DX), Tue, Apr 26, 2022, 6:30 PM   | Meetup'
       url: https://www.meetup.com/praguejs/events/285335331/
       ical:
-        summary: '2022 #4 '
+        summary: '2022 #4 Developer Experience (DX)'
         description: 'PragueJS
 
           Tuesday, April 26 at 6:30 PM
