--- a/data/sources/mlmu-brno.yaml
+++ b/data/sources/mlmu-brno.yaml
@@ -225,10 +225,10 @@ series:
         dtstart: 2022-01-27 18:00:00+01:00
         dtend: 2022-01-27 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Apr 19, 4:00 PM  CEST: # D\DALOS – The Role of AI in Achieving the Sustainable Development Goals
+      meta_description: 'Tue, Apr 19, 4:00 PM  CEST: # DAIDALOS – The Role of AI in Achieving the Sustainable Development Goals
 
 
-        We invite you to the online discussion "The Role of AI in Achieving the Sustainable Development G'
+        We invite you to the online discussion "The Role of AI in Achieving the Sustainable Development '
       og_title: D<AI>DALOS – Role of AI in Achieving The Sustainable Development Goals, Tue, Apr 19, 2022, 4:00 PM   | Meetup
       url: https://www.meetup.com/Machine-Learning-Meetup-Brno/events/285343994/
       ical:
@@ -238,7 +238,7 @@ series:
           Tuesday, April 19 at 4:00 PM
 
 
-          # D\\<AI>DALOS – The Role of AI in Achieving the Sustainable Development Goals We invite you to the online discussion "The Role of AI in Achieving the ...
+          # DAIDALOS – The Role of AI in Achieving the Sustainable Development Goals We invite you to the online discussion "The Role of AI in Achieving the Sus...
 
 
           https://www.meetup.com/Machine-Learning-Meetup-Brno/events/285343994/'
