--- a/data/sources/the-social-programmers.yaml
+++ b/data/sources/the-social-programmers.yaml
@@ -241,3 +241,30 @@ series:
         url: https://www.meetup.com/the-social-programers/events/285201541/
         dtstart: 2022-04-13 19:30:00+02:00
         dtend: 2022-04-13 21:30:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Apr 21, 7:00 PM  CEST: Coding Session
+
+
+        Let''s have a drink and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a la'
+      og_title: Coding session V9, Thu, Apr 21, 2022, 7:00 PM   | Meetup
+      url: https://www.meetup.com/the-social-programers/events/285365084/
+      ical:
+        summary: Coding session V9
+        description: 'The Social Programmers
+
+          Thursday, April 21 at 7:00 PM
+
+
+          Coding Session Let''s have a drink and code together and build something interesting. Work on your own project or join in on the group project or just ...
+
+
+          https://www.meetup.com/the-social-programers/events/285365084/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285365084@meetup.com
+        url: https://www.meetup.com/the-social-programers/events/285365084/
+        dtstart: 2022-04-21 19:00:00+02:00
+        dtend: 2022-04-21 21:00:00+02:00
