--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -168,3 +168,26 @@ series:
         url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydckbbc/
         dtstart: 2022-07-20 19:00:00+02:00
         dtend: 2022-07-20 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Aug 17, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague #, Wed, Aug 17, 2022, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydclbwb/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, August 17 at 7:00 PM\n
+
+          We will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydclbwb/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydclbwb@meetup.com
+        url: https://www.meetup.com/Pyvo-Prague-Python-Meetup/events/bcxlssydclbwb/
+        dtstart: 2022-08-17 19:00:00+02:00
+        dtend: 2022-08-17 23:59:00+02:00
