data: cron update

--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -616,3 +616,27 @@ series:
         url: https://www.meetup.com/asociace-ux/events/285352665/
         dtstart: 2022-04-27 16:30:00+02:00
         dtend: 2022-04-27 19:30:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, May 5, 7:00 PM  CEST: ✍️ Creating user-friendly copy for mobile and web apps is getting more and more attention. When should UX Writers enter the design process? How should they collaborate with'
+      og_title: 'UX Writing vs UX Design: The Ultimate Workflow┃PRAGUE UX WRITERS MEETUP, Thu, May 5, 2022, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/asociace-ux/events/285416490/
+      ical:
+        summary: 'UX Writing vs UX Design: The Ultimate Workflow┃PRAGUE UX WRITERS MEETUP'
+        description: 'Asociace UX
+
+          Thursday, May 5 at 7:00 PM
+
+
+          ✍️ Creating user-friendly copy for mobile and web apps is getting more and more attention. When should UX Writers enter the design process? How should...
+
+
+          https://www.meetup.com/asociace-ux/events/285416490/'
+        location: Wrike Czech s.r.o. (Boudníkova 9, Praha 8-Palmovka, Czech Republic 170 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285416490@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/285416490/
+        dtstart: 2022-05-05 19:00:00+02:00
+        dtend: 2022-05-05 20:30:00+02:00
