--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -1094,3 +1094,27 @@ series:
         url: https://www.meetup.com/typedb-prague/events/285434938/
         dtstart: 2022-05-03 18:30:00+02:00
         dtend: 2022-05-03 19:30:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, May 5, 6:30 PM  CEST: Knowledge of cyber threats is a key focus in cyber security. [TypeDB - CTI](https://github.com/typedb-osi/typedb-cti) is an open source knowledge graph to store and manage '
+      og_title: Building a Cyber Threat Intelligence Knowledge Graph, Thu, May 5, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/typedb-prague/events/285435900/
+      ical:
+        summary: Building a Cyber Threat Intelligence Knowledge Graph
+        description: 'TypeDB Prague Engineers
+
+          Thursday, May 5 at 6:30 PM
+
+
+          Knowledge of cyber threats is a key focus in cyber security. (https://github.com/typedb-osi/typedb-cti) is an open source knowledge graph to store and...
+
+
+          https://www.meetup.com/typedb-prague/events/285435900/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285435900@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/285435900/
+        dtstart: 2022-05-05 18:30:00+02:00
+        dtend: 2022-05-05 19:30:00+02:00
