--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -902,3 +902,32 @@ series:
         url: https://www.meetup.com/Morning-Talks/events/285390349/
         dtstart: 2022-05-05 09:00:00+02:00
         dtend: 2022-05-05 10:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, May 18, 9:00 AM  CEST: **Prosíme Vás o registraci přímo na stránkách Datascriptu:**
+
+        https://www.datascript.cz/morning-talks/cicd-end-to-end-reseni-pro-on-premise-aplikace/
+
+
+        **Na co se můžete těši'
+      og_title: 'CI/CD: end-to-end řešení pro on premise aplikace, Wed, May 18, 2022, 9:00 AM   | Meetup'
+      url: https://www.meetup.com/Morning-Talks/events/285390416/
+      ical:
+        summary: 'CI/CD: end-to-end řešení pro on premise aplikace'
+        description: 'Morning Talks
+
+          Wednesday, May 18 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/cicd-end-to-end-reseni-pro-on-premise-aplikace/ **...
+
+
+          https://www.meetup.com/Morning-Talks/events/285390416/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285390416@meetup.com
+        url: https://www.meetup.com/Morning-Talks/events/285390416/
+        dtstart: 2022-05-18 09:00:00+02:00
+        dtend: 2022-05-18 10:00:00+02:00
