--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -919,3 +919,39 @@ series:
         url: https://www.meetup.com/GDGPrague/events/xqcsqsydcjbkb/
         dtstart: 2022-06-07 18:30:00+02:00
         dtend: 2022-06-07 20:30:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Jun 21, 6:30 PM  CEST: • How to join?
+
+        Online only because of covid https://discord.gg/TnaMJMyTDw
+
+
+        • What we''ll do
+
+        https://sites.google.com/site/garagepragueone/home
+
+
+        http://gdg-garage.github.io/
+
+        '
+      og_title: GDG Garage Prague One, Tue, Jun 21, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/GDGPrague/events/xqcsqsydcjbcc/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, June 21 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/GDGPrague/events/xqcsqsydcjbcc/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsydcjbcc@meetup.com
+        url: https://www.meetup.com/GDGPrague/events/xqcsqsydcjbcc/
+        dtstart: 2022-06-21 18:30:00+02:00
+        dtend: 2022-06-21 20:30:00+02:00
