--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -264,3 +264,27 @@ series:
         url: https://www.meetup.com/TopMonks-Caffe/events/284921450/
         dtstart: 2022-04-05 19:00:00+02:00
         dtend: 2022-04-05 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, May 3, 7:00 PM  CEST: Další TopMonks Caffé bude mít nosné téma ze světa crypta a hlavním řečníkem bude Lumír Mrkva.'
+      og_title: Satisfying degens in dotsama, Tue, May 3, 2022, 7:00 PM   | Meetup
+      url: https://www.meetup.com/TopMonks-Caffe/events/285524034/
+      ical:
+        summary: Satisfying degens in dotsama
+        description: 'TopMonks Caffè
+
+          Tuesday, May 3 at 7:00 PM
+
+
+          Další TopMonks Caffé bude mít nosné téma ze světa crypta a hlavním řečníkem bude Lumír Mrkva.
+
+
+          https://www.meetup.com/TopMonks-Caffe/events/285524034/'
+        location: Loft N8 Restaurant and Shisha Lounge (Nekázanka 883/8, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285524034@meetup.com
+        url: https://www.meetup.com/TopMonks-Caffe/events/285524034/
+        dtstart: 2022-05-03 19:00:00+02:00
+        dtend: 2022-05-03 21:00:00+02:00
