--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -931,3 +931,32 @@ series:
         url: https://www.meetup.com/Morning-Talks/events/285390416/
         dtstart: 2022-05-18 09:00:00+02:00
         dtend: 2022-05-18 10:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, May 25, 9:00 AM  CEST: **Prosíme Vás o registraci přímo na stránkách Datascriptu:**
+
+        https://www.datascript.cz/morning-talks/aws-governance-aneb-jak-na-centralizaci-spravy-aws-uctu/
+
+
+        **Na co se mů'
+      og_title: AWS Governance aneb jak na centralizaci správy AWS účtů, Wed, May 25, 2022, 9:00 AM   | Meetup
+      url: https://www.meetup.com/Morning-Talks/events/285390483/
+      ical:
+        summary: AWS Governance aneb jak na centralizaci správy AWS účtů
+        description: 'Morning Talks
+
+          Wednesday, May 25 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/aws-governance-aneb-jak-na-centralizaci-spravy-aws...
+
+
+          https://www.meetup.com/Morning-Talks/events/285390483/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285390483@meetup.com
+        url: https://www.meetup.com/Morning-Talks/events/285390483/
+        dtstart: 2022-05-25 09:00:00+02:00
+        dtend: 2022-05-25 10:00:00+02:00
