--- a/data/sources/agilni-cafe-praha.yaml
+++ b/data/sources/agilni-cafe-praha.yaml
@@ -155,3 +155,51 @@ series:
         url: https://www.meetup.com/Agilni-Open-Cafe-Praha/events/285202778/
         dtstart: 2022-05-10 18:00:00+02:00
         dtend: 2022-05-10 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, May 10, 6:00 PM  CEST: Příští Agilní Open Café alias setkání Agilních nadšenců bude po dlouhé době opět v kavárně v Praze ve úterý 10. května 2022. Opencafé je pro ty, kteří chtějí něčím zajímavý'
+      og_title: Agilní Open Café Praha – 10.5.2022, Tue, May 10, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/agilni-open-cafe-praha/events/285202778/
+      ical:
+        summary: Agilní Open Café Praha – 10.5.2022
+        description: 'Agilni Open Cafe Praha
+
+          Tuesday, May 10 at 6:00 PM
+
+
+          Příští Agilní Open Café alias setkání Agilních nadšenců bude po dlouhé době opět v kavárně v Praze ve úterý 10. května 2022. Opencafé je pro ty, kteří...
+
+
+          https://www.meetup.com/Agilni-Open-Cafe-Praha/events/285202778/'
+        location: Café Záhorský (Eliášova 279, Praha 6-Bubeneč, Czech Republic 160 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285202778@meetup.com
+        url: https://www.meetup.com/Agilni-Open-Cafe-Praha/events/285202778/
+        dtstart: 2022-05-10 18:00:00+02:00
+        dtend: 2022-05-10 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Mar 2, 6:00 PM  CET: Příští Agilní Open Café alias setkání Agilních nadšenců bude po dlouhé době opět v kavárně v Praze ve středu 2. března 2022. Opencafé je pro ty, kteří chtějí něčím zajímavý'
+      og_title: Agilní Open Café Praha – 2.3.2022, Wed, Mar 2, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/agilni-open-cafe-praha/events/283977245/
+      ical:
+        summary: Agilní Open Café Praha – 2.3.2022
+        description: 'Agilni Open Cafe Praha
+
+          Wednesday, March 2 at 6:00 PM
+
+
+          Příští Agilní Open Café alias setkání Agilních nadšenců bude po dlouhé době opět v kavárně v Praze ve středu 2. března 2022. Opencafé je pro ty, kteří...
+
+
+          https://www.meetup.com/Agilni-Open-Cafe-Praha/events/283977245/'
+        location: Café Záhorský (Eliášova 279, Praha 6-Bubeneč, Czech Republic 160 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_283977245@meetup.com
+        url: https://www.meetup.com/Agilni-Open-Cafe-Praha/events/283977245/
+        dtstart: 2022-03-02 18:00:00+01:00
+        dtend: 2022-03-02 20:00:00+01:00
